<resources>
    <string name="app_name">AdBird</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">Post</string>
    <string name="adsPicture">adsPicture</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh</string>
    <string name="pull_to_refresh_release_label">Release to refresh</string>
    <string name="pull_to_refresh_refreshing_label">Refreshing</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh</string>
    <string name="empty_ad">Unfortunately there are no suggestions for you from advertisers</string>
    <string name="empty_history">Here you can track statuses of your posted ads</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="sure">Are you sure to disconnect account?</string>
    <string name="condition">Do not edit text photo of original post!</string>
    <string name="locale">en</string>
    <string name="myBill">My balance</string>
    <string name="socialNet">Social network accounts</string>
    <string name="comp_name">Coca Cola</string>
    <string name="comp_username">coca_cola</string>
    <string name="ad_string">Coca </string>
    <string name="pending">PENDING</string>
    <string name="paid">PAID</string>
    <string name="cancelled">CANCELLED</string>
    <string name="posted_date">01.01.14</string>
    <string name="money_amount">$0.5</string>
    <string name="ad_hash">#hash #hash1</string>
    <string name="ad_ref">#ref #ref1</string>
    <string name="payment_notification">Payment notifications</string>
    <string name="enable_notification">Enable notification</string>
    <string name="disable_notification">Disable notification</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="instruction_of_adbird">Instruction of AdBird</string>
    <string name="title_activity_choose_language">ChooseLanguage</string>
    <string name="title_activity_feedback">Contact Us</string>
    <string name="title_activity_feedback_summary">Our coordinates</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_uc">PRIVACY POLICY</string>
    <string name="privacy_policy_summary">Privacy Policy</string>
    <string name="logout">LogOut</string>
    <string name="logout_summary">Exit from AdBird</string>
    <string name="forget_password"><u>Forgot password?</u></string>
    <string name="social_networks">Social networks</string>
    <string name="faq">FAQ</string>
    <string name="categories">Categories</string>
    <string name="categories_updated">Categories were successfully changed</string>
    <string name="categories_updated_deny">You can change categories only once in 180 days</string>
    <string name="instructions">Instructions</string>
    <string name="rating_user">RATING</string>
    <string name="does_not_paid">Why does not paid?</string>
    <string name="does_not_paid_uc">WHY DOES NOT PAID?</string>
    <string name="title_activity_ads">Post ad</string>
    <string name="title_activity_loading">Calculating your Rating</string>
    <string name="title_activity_leaders">Leaders</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_rating">Calculating your Rating</string>
    <string name="title_activity_history">HISTORY</string>
    <string name="title_activity_profile">PROFILE</string>
    <string name="title_activity_themes">THEMES</string>
    <string name="title_activity_login_def">Login</string>
    <string name="title_activity_utilities">Utilities</string>
    <string name="title_activity_utilities_fragment">UtilitiesFragment</string>
    <string name="saving_err">Sorry we can not register you. Please try again later</string>
    <string name="title_activity_splash_screen">AdBird</string>
    <string name="pleaseWait">Please Wait...</string>
    <string name="login">Sign In</string>
    <string name="title_activity_forgot__password">Forgot Password</string>
    <string name="title_activity_register">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="loc">City</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="conf_password">Confirm password</string>
    <string name="register"><u>Register</u></string>
    <string name="registerBtn">Create Account</string>
    <string name="invalidDay">Please enter date of your birth</string>
    <string name="invalidEmail">Please enter a valid e-mail</string>
    <string name="invalidName">Please enter your name</string>
    <string name="invalidSurname">Please enter your surname</string>
    <string name="check_your_credentials">Check your credentials</string>
    <string name="okBtn">Ok</string>
    <string name="title_activity_public_offer">Public Offer</string>
    <string name="confirm_email">Please confirm your e-mail address</string>
    <string name="allCaps">true</string>
    <string name="th_games">Games</string>
    <string name="th_travelling">Travelling</string>
    <string name="th_shops">Shops</string>
    <string name="th_food">Food</string>
    <string name="th_fitness">Fitness</string>
    <string name="th_babies">Babies</string>
    <string name="th_cats">Cats</string>
    <string name="th_science">Science</string>
    <string name="th_makeup">Make up</string>
    <string name="th_design">Design</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="check_email">Please ,check your email.</string>
    <string name="share_text">Share ads with friends \n and earn money</string>
    <string name="promt_password">Promt Password</string>
    <string name="rating_history">Rating</string>
    <string name="accountOff">Your account is deactivated</string>
    <string name="wrongEmail">Wrong e-mail address</string>
    <string name="wrongPass">Wrong password</string>
    <string name="choose_language">Choose language:</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
    <string name="full_name">Name Surname</string>
    <string name="username">username</string>
    <string name="balance">Balance</string>
    <string name="money_account">$20.78</string>
    <string name="rating">YOUR RATING</string>
    <string name="user_level_1">NEWBIE</string>
    <string name="user_level_2">ENTHUSIAST</string>
    <string name="user_level_3">CONTRIBUTOR</string>
    <string name="user_level_4">EXPERT</string>
    <string name="user_level_5">GURU</string>
    <string name="rating_in_num">9.92</string>
    <string name="rating_change">+0.1</string>
    <string name="location">LOCATION</string>
    <string name="location_name">Almaty, Kazakhstan</string>
    <string name="your_themes">YOUR THEMES</string>
    <string name="take_tour">Тake the tour</string>
    <string name="user_lvl_1">NEWBIE</string>
    <string name="user_lvl_2">ENTHUSIAST</string>
    <string name="user_lvl_3">CONTRIBUTOR</string>
    <string name="user_lvl_4">EXPERT</string>
    <string name="user_lvl_5">GURU</string>
    <string name="rating_eval">According to your rating you will be granted </string>
    <string name="rating_eval_cont">per post</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_categories">Select the categories that reflect the theme of your photos to Instagram</string>
    <string name="loading">Loading...</string>
    <string name="finilizing">Finalizing...</string>
    <string name="update">Release to update</string>
    <string name="update_down">Pull down to update</string>
    <string name="socialnetwork">SOCIAL NETWORKS</string>
    <string name="disconnect">Disconnect from Instagram?</string>
    <string name="public_offer">PUBLIC OFFER</string>
    <string name="accepted">Agree</string>
    <string name="cashout">Cash out</string>
    <string name="forget_password_uc">Forgot password?</string>
    <string name="please_wait_ru">Пожалуйста подождите..</string>
    <string name="rating_calc_ru">Подсчет рейтинга может занять несколько часов. Мы уведомим Вас, когда все будет готово</string>
    <string name="rating_calc">Counting rating can take few hours.</string>
    <string name="rating_two">AdBird will notify you when it is completed</string>
    <string name="wait">AdBird is calculating your popularity on Instagram</string>
    <string name="tute_ad">Choose the ad you like and post it in your profile</string>
    <string name="tute_2">The ad will appear on your Instagram feed</string>
    <string name="tute_history">Track statuses and purchased ads</string>
    <string name="tute_profile">Track your earnings on profile page</string>
    <string name="cancel">Cancel</string>
    <string name="emailR">test@test.com</string>
    <string name="country">Country</string>
    <string name="contact_us">CONTACT US</string>
    <string name="contact_us_lowercase">Contact us</string>
    <string name="feedbackText"><u>Leave Feedback</u></string>
    <string name="non_confidential">You instagram account cannot \nbe private.</string>
    <string name="post_ad">Choose an ad to post.</string>
    <string name="copied">The ad text has been copied to the clipboard, please paste it in Instagram while creating the post</string>
    <string name="ads_title">ADS</string>
    <string name="profile_title">PROFILE</string>
    <string name="history_title">HISTORY</string>
    <string name="settings_title">SETTINGS</string>
    <string name="next"><u>Next</u></string>
    <string name="choose_lang_default">en</string>
    <string name="title_activity_settings_lang">CHANGE LANGUAGE</string>
    <string name="change_lang">Language</string>
    <string name="hint_msg">Write you message here..</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="update_city">LOCATION</string>
    <string name="invalid_city">Invalid City</string>
    <string name="invalid_country">Invalid Country</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="dob_label_text">Date of birth</string>
    <string name="please_wait">Please wait..</string>
    <string name="refreshing">Refreshing</string>
    <string name="title_activity_new_settings">NewSettingsActivity</string>
    <string name="title_activity_nsettings">NSettingsActivity</string>
    <string name="max_themes">You can select maximum 3 categories</string>
    <string name="min_theme">Please select at least one theme</string>
    <string name="chose_date">Birth Date</string>
    <string name="ihaveaccount"><u>I already have an account</u></string>
    <string name="createAccount"><u>Сreate Account</u></string>
    <string name="yourpassword">Password will be sent to your e-mail</string>
    <string name="sendPassword">Send password</string>
    <string name="save">Save</string>
    <string name="enterOld">Enter your password</string>
    <string name="enterNew">Enter new password</string>
    <string name="confirmNew">Repeat new password</string>
</resources>