<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/grey_faded"
    tools:context="test.com.adbirdads.ChangePassword">


    <EditText
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_weight="0.24"
        android:inputType="textPassword"
        android:hint="@string/enterOld"
        android:fontFamily="sans-serif-condensed"
        android:background="@drawable/adbird_edit_text_holo_light"
        android:ems="10"
        android:id="@+id/oldPass"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_weight="0.24"
        android:inputType="textPassword"
        android:hint="@string/enterNew"
        android:fontFamily="sans-serif-condensed"
        android:background="@drawable/adbird_edit_text_holo_light"
        android:ems="10"
        android:id="@+id/newPass"
        android:layout_below="@+id/oldPass"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_weight="0.24"
        android:inputType="textPassword"
        android:hint="@string/confirmNew"
        android:fontFamily="sans-serif-condensed"
        android:background="@drawable/adbird_edit_text_holo_light"
        android:ems="10"
        android:id="@+id/confirmPass"
        android:layout_below="@+id/newPass"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:text="@string/save"
        android:textColor="@color/taxi_white"
        android:background="@drawable/orange_button"
        android:onClick="newPassword"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
