<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/histopy_box1"
    android:layout_height="match_parent"
    tools:context=".SquareRelativeLayout" >

    <ImageView 
        android:id="@+id/history_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ad_image" />

    <ImageView
        android:id="@+id/white_box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/white_box"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/comp_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/white_box"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/comp_username"
        android:textColor="@color/tabbar"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/white_box"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/pending"
        android:textColor="@color/tabbar"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/posted_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/comp_name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/posted_date"
        android:textColor="@color/tabbar"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/money_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/status"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/money_amount"
        android:textColor="@color/tabbar"
        android:textStyle="bold"
        android:textSize="12sp" />

</RelativeLayout>