<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LoginFormContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_faded"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:background="@drawable/adbird_edit_text_holo_light"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textColor="@color/grey_as_sasha"
        android:textColorHint="@color/grey_as_sasha"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="85dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#FFF"
        android:text="@string/sendPassword"
        android:fontFamily="sans-serif-condensed"
        android:background="@drawable/orange_button"
        android:onClick="SendEmail"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourpassword"
        android:fontFamily="sans-serif-condensed"
        android:textSize="17dp"
        android:textColor="@color/grey_as_sasha"
        android:id="@+id/textView"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/emailEditText"
        android:layout_alignParentStart="true" />

</RelativeLayout>