<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Login" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="Login Progress"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <RelativeLayout
        android:id="@+id/ч"
        style="@style/LoginFormContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_faded"
        android:gravity="clip_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"

            android:src="@drawable/adbird_logo_main" />

        <EditText
            android:id="@+id/email"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/password"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:background="@drawable/adbird_edit_text_holo_light"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/grey_as_sasha"
            android:textColorHint="@color/grey_as_sasha"
            android:layout_below="@+id/imageView1" />

        <EditText
            android:id="@+id/password"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_below="@+id/email"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginBottom="24dp"
            android:hint="@string/prompt_password"
            android:background="@drawable/adbird_edit_text_holo_light"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionSend"
            android:inputType="textPassword"
            android:maxLines="1"

            android:singleLine="true"
            android:textColor="@color/grey_as_sasha"
            android:textColorHint="@color/grey_as_sasha" />

        <ImageView
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignLeft="@+id/password"
            android:layout_alignRight="@+id/password"
            android:layout_alignTop="@+id/sign_in_button"
            android:layout_marginTop="75dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/forgetPass"
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@drawable/link_text"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/registerTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/createAccount"
                android:layout_marginLeft="70dp"
                android:textColor="@drawable/link_text"
                android:textSize="17sp" />
        </LinearLayout>

        <Button
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/login"
            android:textColor="@color/taxi_white"
            android:id="@+id/loginButton"
            android:background="@drawable/orange_button"
            android:layout_below="@+id/sign_in_button"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</merge>