<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loading_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_faded"
    tools:context=".Loading" >

      <TextView
          android:id="@+id/wait"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:fontFamily="sans-serif-condensed"
          android:layout_marginRight="10dp"
          android:layout_marginLeft="10dp"
          android:text="@string/wait"
          android:textSize="16sp"
          android:layout_marginTop="36dp"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true" />
      
      <TextView
          android:id="@+id/rating_calc"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:text="@string/rating_calc"
          android:fontFamily="sans-serif-condensed"
          android:textSize="16sp"
          android:layout_marginTop="29dp"
          android:layout_below="@+id/animation"
          android:layout_centerHorizontal="true" />

      <ImageView
          android:id="@+id/animation"
          android:layout_width="265dp"
          android:layout_height="265dp"
          android:layout_marginTop="100dp"
          android:src="@drawable/spinner_clockwise"
          android:layout_centerHorizontal="true" />

      <ImageView
          android:id="@+id/bird"
          android:layout_width="70dp"
          android:layout_height="70dp"
          android:src="@drawable/icon_bird_new"
          android:layout_marginTop="195dp"
          android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/rating_two"
        android:id="@+id/textView"
        android:layout_below="@+id/rating_calc"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
